k8s/namespace-secrets.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: edusaas
  labels:
    name: edusaas
    environment: production
